@@ -1,8 +1,6 @@
 AUX phonetooth-0.4.0-python24.patch 1512 RMD160 32ba35315d1997641aa959be7b8b2d04ead5f3b9 SHA1 ce42b958685930dc9c072ad80a6625a4434995f5 SHA256 4574bfc542f43b9b00d7e75aa0cb961a33b62c6c1ea712087a82bf552858ec35
-DIST phonetooth-0.3.1.tar.gz 143918 RMD160 1281ffe8598998b790e78dfce06713dadfaa9350 SHA1 dbe4275638a61cfcab6cfc7e2cb92173a54a140a SHA256 0176baecc26846472561a26dee56b021795c9e4ed6de7e273b646d9ebe736a9a
-DIST phonetooth-0.4.0.tar.gz 154697 RMD160 842ec4ac7bd3e42892e607a85fae435cd6a00311 SHA1 385ef6ff590591f6b106e3d8234162cba7aebe1b SHA256 ac28a0da20afc3b061e9403bfab9e790ec1302e82a1464346d00bfd7cece673d
 DIST phonetooth-0.4.1.tar.gz 155406 RMD160 f6060f198afb4ef3cd902f6cb3f48a322d1ac0f1 SHA1 30183e2b31940cba2ce03cd5428c24e508401301 SHA256 f7436566659db660d633cc55b75a7e1a8f9817a60c65716b21f8e65854e99a42
-EBUILD phonetooth-0.3.1.ebuild 956 RMD160 e22a18969019e65077afca811a626273e259234d SHA1 0461f475e26503bd5370e2f92d51df74e18cd913 SHA256 086f312e7276e7cd723ec4a2140ce014910bbbd6a4e4e9df57eb609877894212
-EBUILD phonetooth-0.4.0-r1.ebuild 874 RMD160 9855f3712a1b1200f9b6078f91bf163aa281caaf SHA1 bbdb8ad813e66ce0e91111ecefcd6045cf810d2a SHA256 8ed53deed80ac8d22851d3cba6530ebb5b496d625e07d72dfe33a72852d814d4
+DIST phonetooth-0.5.0.tar.gz 161907 RMD160 fab6a68e323699f423360a232da60def74e50267 SHA1 25626fbbee57e175b9eecdc316b236a390c4ccdf SHA256 6ace97f1f5dd6ef858265bdfe4bc25c677b7f834124caa34b8eb52dfbd718df4
 EBUILD phonetooth-0.4.1.ebuild 792 RMD160 be731a4e17972772920cb6014790a8cf61b479f1 SHA1 09178994b983052bf4f2867c278e9ac7e3f931c5 SHA256 f278aef285991aef4f8ad88de31847567d396ded3a7dc20796ed72141ed32611
-MISC ChangeLog 704 RMD160 247ed36b9e5e1efaef854b01d7830cb2ea03a875 SHA1 89dbc531060c0f0e4639d87569f4a81e4871b959 SHA256 16bec3d120db7ca92d2e1587d04ac08819f6b35673c12c7a2c048cf5c326c29a
+EBUILD phonetooth-0.5.0.ebuild 792 RMD160 be731a4e17972772920cb6014790a8cf61b479f1 SHA1 09178994b983052bf4f2867c278e9ac7e3f931c5 SHA256 f278aef285991aef4f8ad88de31847567d396ded3a7dc20796ed72141ed32611
+MISC ChangeLog 879 RMD160 db2e210fbd29c8483126d557065af966cdce3e06 SHA1 8a6a506adce18b198b40c2ad3ed64683f1761520 SHA256 09b651d88d547348e5ab52e70baa85a724bed8cc00f8be94a58dad4049e377bf
